<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
       	
       <ImageView 
    		android:id="@+id/foto"
   			android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center_horizontal"
   			android:src="@drawable/ic_no_image"
    		android:contentDescription="@string/foto"/>
        
       <TextView
   			android:id="@+id/tvNome"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
			android:text="@string/nome"/>

		<EditText
		    android:id="@+id/edNome"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/nome">
		    <requestFocus />
		</EditText>
		
		<TextView
		    android:id="@+id/tvTelefone"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/telefone"/>
		
		<EditText
		    android:id="@+id/edTefone"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="phone"
			android:hint="@string/telefone"/>
		
		<TextView
		    android:id="@+id/tvCelular"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:text="@string/celular"/>
		
		<EditText
		    android:id="@+id/edCelular"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="phone"
			android:hint="@string/celular"/>
		
		<TextView
		    android:id="@+id/tvDataNascimente"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/dtNascimento"/>
		
		<EditText
		    android:id="@+id/edDataNascimento"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/dtNascimento"/>
		
		<TextView
		    android:id="@+id/tvBairro"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/bairro"/>
		
		<EditText
		    android:id="@+id/edBairro"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPostalAddress"
			android:hint="@string/bairro"/>
		
		<TextView
		    android:id="@+id/tvCep"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/cep"/>
		
		<EditText
		    android:id="@+id/edCep"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPostalAddress"
			android:hint="@string/cep"/>
		
		<TextView
		    android:id="@+id/tvEndereco"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/endereco"/>
		
		<EditText
		    android:id="@+id/edEndereco"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPostalAddress"
			android:hint="@string/endereco"/>
		
		<TextView
		    android:id="@+id/tvSexo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/sexo"/> 
			         
        <RadioGroup
 			android:id="@+id/radioSex"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:orientation="vertical">
		    

         <RadioButton
 			android:id="@+id/rbMasc"
		 	android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/masculino"
 			android:checked="true" />

         <RadioButton
			 android:id = "@+id/rbFeminino"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:text="@string/feminino" />

     	</RadioGroup>
     	
        <TextView
		    android:id="@+id/tvUnidadeSaude"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/unidadeSaude"/>
		
		<EditText
		    android:id="@+id/edUnidadeSaude"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="phone"
			android:hint="@string/unidadeSaude"/>
        <Button
		    android:id="@+id/sbSalvar"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/salvar"/>
        
	</LinearLayout>
</ScrollView>
