<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
>
	<br.fucapi.fapeam.monitori.activity.Dashboard
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
	>
		<Button
			android:id="@+id/btClassicos"
			android:text="@string/menu_agente"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawablePadding="10dp"
			android:background="@null"
			android:textStyle="bold"
		/>
		<Button
			android:id="@+id/btLuxo"
			android:text="@string/menu_paciente"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawablePadding="10dp"
			android:background="@null"
			android:textStyle="bold"
		/>
		<Button
			android:id="@+id/btEsportivos"
			android:text="@string/menu_medico"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawablePadding="10dp"
			android:background="@null"
			android:textStyle="bold"
		/>
		<Button
			android:id="@+id/btSobre"
			android:text="@string/menu_coletadados"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawablePadding="10dp"
			android:background="@null"
			android:textStyle="bold"
		/>
	</br.fucapi.fapeam.monitori.activity.Dashboard>
</LinearLayout>